--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
 #index:
 #    path: /
-#    controller: App\Controller\DefaultController::index
+#    controller: App\Controller\DefaultController::
+
+# config/routes.yaml
+# the "wild_index" route name is not important yet
+
+
+
+
